--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,25 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+input, textarea{
+  @apply border-2 border-gray-300 rounded-md px-1 mb-2 w-full;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+input:focus, textarea:focus{
+  @apply border-blue-900;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+label{
+  @apply text-blue-900;
+}
+.btn-primary{
+  @apply bg-blue-900 text-white px-4 rounded-md py-1;
+}
+table.basic{
+  @apply w-full;
+}
+table.basic thead tr td{
+  @apply bg-blue-100;
+}
+table.basic tr td{
+  @apply border border-blue-200 p-1;
 }
